[tool.poetry]
name = "mazoku"
version = "1.0.0"
description = "Maze solving game with randomly generated mazes and raycasting"
authors = ["Kamil Marut <kamil@kamilmarut.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyxel = "^2.0.9"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "ANN", "S", "A", "G", "PIE", "T20", "RSE", "PTH", "PD", "TRY", "RUF"]
ignore = ["ANN401"]
line-length = 120
target-version = "py311"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
black = "^24.3.0"
mypy = "^1.9.0"
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
